[package]
name = "sshbind"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
env_logger = "0.11.6"
libreauth = "0.17.0"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"

[dev-dependencies]
secrecy = "0.10.3"
age = "0.11.1"
tempfile = "3.17.1"
tokio = { version = "1", features = ["full"] }
russh = "0.50.4"
async-trait = "0.1.86"
log = "0.4.26"
env_logger = "0.11.6"
