[package]
name = "sshbind"
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["Maximilian Philipp <maxkon2000@gmail.com>"]
description = "SSHBind is a Rust library that securely binds remote services behind multiple SSH jump hosts to a local socket, enabling seamless access with encrypted credential management, TOTP-based two-factor authentication, and automatic reconnection."
readme = "README.md"
homepage = "https://github.com/Xyhlon/SSHBind"
repository = "https://github.com/Xyhlon/SSHBind"
documentation = "https://docs.rs/sshbind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3"
dirs = "6.0.0"
env_logger = "0.11.6"
interprocess = "2.2.3"
lazy_static = "1.4"
libreauth = "0.17.0"
log = "0.4.26"
named-sem = "0.2.3"
polling = "3.0"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"
serde_json = "1.0.140"
serde_yml = "0.0.12"
shared_memory = "0.12.4"
ssh2 = "0.9"
ssh2-config = "0.5.4"
url = "2.5.4"
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
secrecy = "0.10.3"
age = "0.11.1"
tempfile = "3.17.1"
tokio = { version = "1", features = ["full"] }
async-ssh2-lite = "0.5.0"
russh = "0.51.1"
async-trait = "0.1.86"
log = "0.4.26"
env_logger = "0.11.6"
serial_test = "3.2.0"

[[bin]]
name = "integration_test_runner"
path = "tests/integration_test_runner.rs"
required-features = ["tokio"]

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"
