[package]
name = "sshbind"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Maximilian Philipp <maxkon2000@gmail.com>"]
description = "SSHBind is a Rust library that securely binds remote services behind multiple SSH jump hosts to a local socket, enabling seamless access with encrypted credential management, TOTP-based two-factor authentication, and automatic reconnection."
readme = "README.md"
homepage = "https://github.com/Xyhlon/SSHBind"
repository = "https://github.com/Xyhlon/SSHBind"
documentation = "https://docs.rs/sshbind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using forked version that removes the problematic assertions
# async-ssh2-lite = { git = "https://github.com/bk-rs/ssh-rs", branch = "main", features = [
#   "async-io",
# ] }
# async-ssh2-lite = { git = "https://github.com/krystophny/ssh-rs", rev = "b50e0bcb1a85215c6328bfed1df13038359818fc", features = [
#   "tokio",
# ] }
async-channel = "2.3.2"
async-executor = "1.13.3"
async-io = "2.5.0"
async-ssh2-lite = { git = "https://github.com/bk-rs/ssh-rs", rev = "3d05c309a4b6e88f0a77213fe606482528e1bb66", features = [
  "async-io",
] }
cfg-if = "1.0.0"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
easy-parallel = "3.3.1"
env_logger = "0.11.6"
futures = "0.3.31"
futures-lite = "2.3.0"
interprocess = "2.2.3"
libreauth = "0.17.0"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
shared_memory = "0.12.4"
ssh2-config = "0.5.4"
tempfile = "3.17.1"
url = "2.5.4"

[dev-dependencies]
secrecy = "0.10.3"
age = "0.11.1"
tempfile = "3.17.1"
tokio = { version = "1", features = ["full"] }
russh = { version = "0.54.3", default-features = false, features = [
  "flate2",
  "ring",
  "rsa",
] }
async-trait = "0.1.86"
log = "0.4.26"
env_logger = "0.11.6"
serial_test = "3.2.0"

# Platform-specific dependencies for binary (excluded on macOS)
[target.'cfg(not(target_os = "macos"))'.dependencies]
named-sem = "0.2.3"
